putting back position:relative on mod/pop. It seems like the only way to fix it. This breaks the newFormattingContext rule, but it is localized on pop.

--- a/core/module/mod.css
+++ b/core/module/mod.css
@@ -27,7 +27,7 @@ b.top, b.top b, b.bottom, b.bottom b{display:block;background-repeat:no-repeat;f
 .complex .bottom{height:5px;/*margin-top:-10px;*/}
 /* pop */
 .pop{overflow:visible;margin: 10px 20px 20px 10px; background-position:left top;}
-.pop .inner{right:-10px; bottom:-10px; background-position:right bottom;padding:0 10px 10px 0;}
+.pop .inner{position:relative;right:-10px; bottom:-10px;background-position:right bottom;padding:0 10px 10px 0;}
 .pop .tl, .pop .br{display:none;}
 .pop .bl{bottom:-10px;}
 .pop .tr{float:right;margin-right:-10px;_display:inline; /*fix double margin bug*/ }
